--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>AirChat</title>
 	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.3/socket.io.min.js" integrity="sha512-GtM/5c/Ie0lStj6QwEG0HkpMQuGr9vrOAgFD4nNmImviyZvsJxN7TYU7b+R7Kthob0zFBUpuxfl3R3Mn1qekTw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
@@ -184,7 +185,12 @@
 						console.log(data);
 						if (data.includes('online', -8) == true){
 							console.log('done')
-							window.alert('ID is already logged in!\nContact the owner at advikdhangarreal@gmail.com if this is an error');
+							swal({
+								title: "ID already logged in!",
+								text: "This ID is already logged in!\ncontact the owner at advikdhangarreal@gmail.com if this is a mistake.",
+								icon: "info",
+								button: "OK",
+							});
 							$('#id').val('');
 						}
 						if (data.includes('found', -8) == true){
@@ -193,7 +199,12 @@
 						}
 						if (data.includes('found', -8) == false && data.includes('online', -8) != true){
 							$('#id').val('');
-							window.alert('invalid id!');
+							swal({
+								title: "Error!",
+								text: "These credentials are invalid!",
+								icon: "error",
+								button: "OK",
+							});
 						}
 					}
 				};
