--- a/templates/register.html
+++ b/templates/register.html
@@ -185,7 +185,7 @@
 	<div class="splash" style="background: #1d2b3a;"></div>
 	<script type="text/javascript">
 		$(document).ready(function() {
-			var socket = io.connect("http://localhost:5000")
+			var socket = io.connect("http://172.17.0.10:5000")
 			socket.on('message', function(data) {
 				if(data=='notValid'){
 					swal({
