--- a/templates/chat.html
+++ b/templates/chat.html
@@ -216,7 +216,7 @@
 			if (idver != 'true') {
 				window.location.href = "/";
 			}
-			var socket = io.connect("http://localhost:5000")
+			var socket = io.connect("http://172.17.0.10:5000")
 
 			socket.on('connect', function() {
 				socket.send('usrconnected@nxgenServers?' + uname + "?" + uid);
